--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,7 @@ serde = { version = "1", features = ["derive"] }
 
 [profile.release]
 lto = true
+
+# minimal for nix-cargo-integration
+[package.metadata.nix]
+build = true
