--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,7 @@ serde = { version = "1", features = ["derive"] }
 [profile.release]
 lto = true
 strip = true
+
+# minimal for nix-cargo-integration
+[package.metadata.nix]
+build = true
